# xchomo_diploma

./: .env.example  .gitignore  .gitmodules  CADDY_SETUP.md  CLAUDE.md  Caddyfile  DEMO.md  DEMO_SETUP.md  DEMO_URLS.md  Dockerfile  IMPLEMENTATION_PLAN.md  LIMITATIONS.md  Makefile  PROJECT_RESTRUCTURE.md  QUICK_START.md  README.md  RECENT_PROGRESS.md  ROADMAP_DIPLOMOVKA.md  TESTING_GUIDE.md  TEST_DOWNLOAD_TYPES.md  THESIS_ALIGNMENT.md  cleanup_docker.sh  conftest.py  create_demo_source.py  debug_imports.sh  docker-compose.yml  pyproject.toml  questions_for_professor.md  requirements-dev.txt  requirements.txt  research_embedding_strategy.md  setup.py  start_services.ps1  stav_projektu.md  test_formats_api.sh  test_formats_server.sh  test_rag_endpoint.py  test_simple.sh  time_rag.sh
config/: era5_config.yaml  pipeline_config.yaml
dagster_project/: __init__.py  catalog_jobs.py  dagster.yaml  dynamic_jobs.py  jobs.py  repository.py  resources.py  schedules.py  source_jobs.py  workspace.yaml
docker/: dagster.yaml  init-db.sh
docs/: EMBEDDING_REFACTORING.md  FLEXIBLE_EMBEDDINGS_QUICKSTART.md  README.md  UNIVERSAL_DATASET_EXAMPLES.md  VECTOR_DB_SCHEMA.md  architecture.md  catalog_audit.md  demo_cheatsheet.md  diploma_research_document.md  optimization_research.md  rag_eval_20260331_145710.md  rag_eval_v1_reindex.md  rag_eval_v2_20260331_145949.md  rag_eval_v2_all_fixes_final.md  rag_eval_v2_clean_final.md  rag_eval_v2_data_boost.md  rag_eval_v2_deterministic.md  rag_eval_v2_final.md  rag_eval_v2_no_diversity.md  rag_eval_v2_no_reranker.md  rag_eval_v2_reindex.md  rag_eval_v2_sonnet_multiagent.md  rag_eval_v2_with_retry.md  rag_pipeline_improvements.md  rag_quality_research.md
research/: data_quality_samples.md  prezentace_poznamky.md  rag_evaluation_and_papers.md  stav_projektu.md
scripts/: _crash_probe.ps1  _force_cancel.sh  _probe_grpc.py  _probe_vdb.py  _wait_final.sh  _wait_run.sh  _wait_runs.sh  _wait_runs3.sh  annotate_golden_queries.py  audit_phase1_urls.py  check_cams.js  check_embeddings.py  embed_knowledge_chunks.py  embed_local_file.py  git_safety_check.py  hash_password.py  list_datasets.js  migrate_project.py  run_test_source.py  setup_from_export.sh  test_embedding_quality.py  test_flexible_embeddings.py  test_open_sources.py  test_source_flow.py
src/: __init__.py  sources.py
tests/: __init__.py  run_rag_evaluation.py  run_rag_evaluation_v2.py  test_catalog.py  test_dagster.py  test_embeddings.py  test_format_processing.py  test_ingestion_formats.py  test_rag_claims.py  test_rag_components.py  test_rag_evaluation.py  test_raster_pipeline_flow.py  test_text_generation.py  test_transformation.py  test_validation.py  test_web_api.py
web_api/: Kopie souboru D1.1.xlsx  __init__.py  config.py  dependencies.py  main.py  models.py  prompt_builder.py  (+2 more)
(+142 files in other folders)
