[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-etl-pipeline"
version = "2.0.0"
description = "Production ETL pipeline for climate data processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Climate Research Team", email = "research@climate-data.org"}
]
keywords = ["climate", "data", "etl", "pipeline", "era5", "netcdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "xarray>=2023.10.0",
    "netCDF4>=1.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "cdsapi>=0.7.7",
    "rasterio>=1.3.0",
    "pyarrow>=9.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourname/climate-etl-pipeline"
Documentation = "https://github.com/yourname/climate-etl-pipeline/docs"
Repository = "https://github.com/yourname/climate-etl-pipeline"
"Bug Tracker" = "https://github.com/yourname/climate-etl-pipeline/issues"

[project.scripts]
climate-etl = "src.data_transformation.pipeline:main"
era5-download = "src.data_acquisition.era5_downloader:main"

[tool.setuptools]
packages = {find = {where = ["."], include = ["src*"]}}
package-dir = {"" = "."}

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
